--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "faunadb": "^4.4.1",
+    "iron-session": "^6.0.5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "reactstrap": "^9.0.1"
+    "reactstrap": "^9.0.1",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.34",
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "typescript": "^4.4.4"
   }
 }
