--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "bootstrap": "^5.1.3",
     "faunadb": "^4.4.1",
     "iron-session": "^6.0.5",
+    "joi": "^17.5.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reactstrap": "^9.0.1",
     "swr": "^1.0.1",
-    "validator": "^13.7.0",
-    "yup": "^0.32.11"
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.34",
