--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "reactstrap": "^9.0.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4"
+    "reactstrap": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.34",
