--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "reactstrap": "^9.0.1"
+    "reactstrap": "^9.0.1",
+    "swr": "^1.0.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.34",
