--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -23,6 +24,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.18.1",
     "@types/react": "^17.0.34",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
