--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:e2e": "playwright test"
+    "test": "playwright test"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
