--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "dompurify": "^2.3.5",
     "faunadb": "^4.4.1",
     "iron-session": "^6.0.5",
     "joi": "^17.5.0",
