--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "aws-sdk": "^2.1069.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "faunadb": "^4.4.1",
