--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "faunadb": "^4.4.1",
     "iron-session": "^6.0.5",
     "joi": "^17.5.0",
-    "next": "^12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reactstrap": "^9.0.1",
