--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^17.0.34",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "^4.4.4"
   }
 }
